# project_peril

./: .gitignore  Cargo.toml  LICENSE  README  README.md  build.rs  options.cfg  rustfmt.toml
assets/original/: LICENSE
shaders/: final_pass.frag  final_pass.vert  final_pass_frag.spv  final_pass_vert.spv  generate_spv.sh  phong.frag  phong.vert  phong_frag.spv  phong_vert.spv
src/: config.rs  draw_object.rs  input.rs  main.rs  nurbs.rs  renderer.rs  scene.rs  vector.rs
src/core/: component.rs  config.rs  draw.rs  game_object.rs  input.rs  material.rs  mesh.rs  mod.rs  transform.rs
src/game/: camera.rs  car.rs  mod.rs  nurbs.rs  scene.rs
src/logger/: mod.rs
src/object/: camera.rs  car.rs  component.rs  draw.rs  game_object.rs  mesh.rs  mod.rs  transform.rs
src/renderer/: mainpass.rs  mod.rs  presentpass.rs
