[package]
name = "project_peril"
version = "0.2.0"
authors = ["Lars-Ivar Hesselberg Simonsen <larsivarhs@gmail.com>","Matthew Guise <reaverrikku@gmail.com>"]
build = "build.rs"

[build-dependencies]
glob = "0.3.0"

[features]
debug_layer = [] # enables debug layer

[dependencies]
ash = "0.29.0"
bit-vec = "0.6.1"
cgmath = "0.17.0"
image = "0.22.2"
serde = "1.0.100"
serde_derive = "1.0.100"
serde_json = "1.0.40"
winit = "0.19.3"
