[package]
name = "project_peril"
version = "0.2.1"
authors = ["Lars-Ivar Hesselberg Simonsen <larsivarhs@gmail.com>","Matthew Guise <reaverrikku@gmail.com>"]
edition = "2018"
build = "build.rs"

[build-dependencies]
glob = "0.3.0"

[features]
debug_layer = [] # enables debug layer

[dependencies]
ash = "0.31.0"
bit-vec = "0.6.3"
cgmath = "0.18.0"
image = "0.23.13"
sdl2 = { version = "0.34.3", features = ["bundled", "static-link"] }
serde = "1.0.123"
serde_derive = "1.0.123"
serde_json = "1.0.62"
